--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/ListarUsuario.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/ListarUsuario.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<legend>Listar Usuário</legend>
+<legend>Usuário</legend>
 
 <p>
     @Html.ActionLink("Criar usuário", "Register")
