--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/Register.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/Register.cshtml
@@ -67,7 +67,7 @@
 }
 
 <div>
-    @Html.ActionLink("Voltar", "Listar")
+    @Html.ActionLink("Voltar", "ListarUsuario")
 </div>
 
 @section Scripts {
