--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Dispositivo/ListarDispositivo.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Dispositivo/ListarDispositivo.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<legend>Listar Dispositivo</legend>
+<legend>Dispositivo</legend>
 
 <p>
     @Html.ActionLink("Criar novo", "RegistrarDispositivo")
