--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Modulo/ListarModulo.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Modulo/ListarModulo.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<HomeAutomex.Models.ModuloModel>
 
 @{
-    ViewBag.Title = "Listar";
+    ViewBag.Title = "Modulo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<legend>Listar Modulo</legend>
+<legend>Modulo</legend>
 <p>
     @Html.ActionLink("Criar novo", "RegistrarModulo")
 </p>
