--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/EditarResidencia.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/EditarResidencia.cshtml
@@ -73,7 +73,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Listar")
+    @Html.ActionLink("Voltar", "ListarResidencia")
 </div>
 
 @section Scripts {
