--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/ListarResidencia.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/ListarResidencia.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
- <legend>Listar Residências</legend>
+ <legend>Residências</legend>
 
 <p>
     @Html.ActionLink("Criar nova", "RegistrarResidencia")
