--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/RegistrarResidencia.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/RegistrarResidencia.cshtml
@@ -69,7 +69,7 @@
 }
 
 <div>
-    @Html.ActionLink("Voltar", "Listar")
+    @Html.ActionLink("Voltar", "ListarResidencia")
 </div>
 
 @section Scripts {
