--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/TipoPorta/EditarTipoPorta.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/TipoPorta/EditarTipoPorta.cshtml
@@ -37,13 +37,13 @@
         </div>
 
         <p>
-            <input type="submit" value="Save" />
+            <input type="submit" value="Editar"  class="btn-glow primary login"/>
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "ListarTipoPorta")
 </div>
 
 @section Scripts {
