--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/TipoPorta/ListarTipoPorta.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/TipoPorta/ListarTipoPorta.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
- <legend>Listar Tipo de Porta</legend>
+ <legend>Tipo de Porta</legend>
 
 <p>
     @Html.ActionLink("Criar nova", "RegistrarTipoPorta")
