--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/TipoPorta/RegistrarTipoPorta.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/TipoPorta/RegistrarTipoPorta.cshtml
@@ -30,13 +30,13 @@
         </div>
 
         <p>
-            <input type="submit" value="Create"  class="btn-glow primary login"/>
+            <input type="submit" value="Registrar"  class="btn-glow primary login"/>
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "ListarTipoPorta")
 </div>
 
 @section Scripts {
