--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Ambiente/EditarAmbiente.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Ambiente/EditarAmbiente.cshtml
@@ -11,12 +11,18 @@
     <fieldset>
         <legend>Editar Ambiente</legend>
         
+          <div class="editor-label">
+            @Html.LabelFor(model => model.Dispositivo)
+        </div>
          <div class="editor-label"> 
-       @Html.DropDownList("dispositivo",ViewBag.Dispositivo as List<SelectListItem>)
+       @Html.DropDownList("dispositivo",ViewBag.Dispositivo as List<SelectListItem>, new { @class="input"})
         </div>
         <br /> 
+          <div class="editor-label">
+            @Html.LabelFor(model => model.Residencia)
+        </div>
          <div class="editor-label"> 
-       @Html.DropDownList("residencia",ViewBag.Residencias as List<SelectListItem>)
+       @Html.DropDownList("residencia", ViewBag.Residencias as List<SelectListItem>, new { @class = "input" })
         </div>
         <br /> 
       
@@ -39,6 +45,7 @@
             @Html.ValidationMessageFor(model => model.Desativado)
         </div>
         <br />
+
         <p>
             <input type="submit" value="Editar" class="btn-glow primary login" />
         </p>
@@ -46,7 +53,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+      @Html.ActionLink("Voltar", "ListarAmbiente")
 </div>
 
 @section Scripts {
