--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Ambiente/ListarAmbiente.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Ambiente/ListarAmbiente.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<legend>Listar Ambiente</legend>
+<legend>Ambiente</legend>
 
 <p>
     @Html.ActionLink("Create New", "RegistrarAmbiente")
