--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -160,7 +160,7 @@
                 </a>
             </li>
             <li class="settings hidden-xs hidden-sm">
-             @Html.ActionLink("Sair", "Login")
+                 <li>@Html.ActionLink("Sair", "Login", "Account")</li>
             </li>
         </ul>
     </header>
