--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/Login.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/Login.cshtml
@@ -75,7 +75,7 @@
             </div>
 
             <div class="no-account">
-                <font face="Arial" size="3" style="text-shadow: 5px  5px 7px white" color="black"><b>Ainda não possui conta?</b></font>
+                <font face="Arial" size="3" style="text-shadow: 5px  5px 7px white" color="black">Ainda não possui conta?</font>
                 @Html.ActionLink("Registrar", "Register")
             </div>
         </div>
