--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/PortaModulo/ListarPortaModulo.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/PortaModulo/ListarPortaModulo.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<legend>Listar Porta do Modulo</legend>
+<legend>Porta do Modulo</legend>
 <p>
     @Html.ActionLink("Criar novo", "RegistrarPortaModulo")
 </p>
