--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/Login.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/Login.cshtml
@@ -75,8 +75,8 @@
             </div>
 
             <div class="no-account">
-                <font face="Arial" size="3" style="text-shadow: 5px  5px 7px white" color="black">Ainda não possui conta?</font>
-                @Html.ActionLink("Registrar", "Register")
+               
+                @Html.ActionLink("Registrar-se", "Register")
             </div>
         </div>
     }
