--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Dispositivo/RegistrarDispositivo.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Dispositivo/RegistrarDispositivo.cshtml
@@ -42,6 +42,14 @@
         <div class="editor-field">
             @Html.EditorFor(model => model.Status)
             @Html.ValidationMessageFor(model => model.Status)
+        </div>
+        
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Favorito)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Favorito)
+            @Html.ValidationMessageFor(model => model.Favorito)
         </div><br />
 
        
