--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    @Scripts.Render("~/bundles/jquery")
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
@@ -302,7 +302,7 @@
     <script src="../Scripts/jquery.min.js"></script>
 
 
-         @Scripts.Render("~/bundles/jquery")
+         @*@Scripts.Render("~/bundles/jquery")*@
         @RenderSection("scripts", required: false)
 </body>
 </html>
